--- a/Physics-Engine/Physics-Engine/Physics-Engine.vcxproj
+++ b/Physics-Engine/Physics-Engine/Physics-Engine.vcxproj
@@ -86,6 +86,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Renderer.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
